Fixed carousel text on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ a {
     width: 60%;
   }
 }
-@media (max-width: 350px) {
+@media (max-width: 400px) {
   #carousel {
     height: 300px;
   }
